--- a/PokeGraph/pokegraph_frontend/src/app/home/home.component.html
+++ b/PokeGraph/pokegraph_frontend/src/app/home/home.component.html
@@ -1,12 +1,9 @@
 <div>
   <div class="row">
-    <p>
+    <p style="margin-top: 0px">
       <mat-toolbar color="primary">
+        <img style="width: 40px; height: 40px; margin-right: 20px" src="assets/pokeball.png">
         <span>PokeGraph</span>
-        <button mat-icon-button color="white" aria-label="Example icon button with a menu icon">
-          <i class="fa-brands fa-github"></i>
-        </button>
-        <span class="example-spacer"></span>
       </mat-toolbar>
     </p>
     <div class="col-md-6">
