--- a/PokeGraph/pokegraph_frontend/src/app/home/modal-winner/modal-winner.component.html
+++ b/PokeGraph/pokegraph_frontend/src/app/home/modal-winner/modal-winner.component.html
@@ -2,9 +2,9 @@
   <button class="close" (click)="onNoClick()">
     <mat-icon>close</mat-icon>
   </button>
-  <div class="titulo"> O vencedor é</div>
+  <div class="titulo"> The winner is</div>
   <div class="name" >{{pokemon.name}} </div>
-  <div mat-dialog-actions style="padding: 0">
+  <div mat-dialog-actions style="padding: 0; height: 60px">
     <img class="imagem" style="width:280px; height:280px" [src]="pokemon.url">
   </div>
 </body>
